--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ structopt = "0.3"
 oci-distribution = "0.7.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 time = "0.1"
+x509-parser = { version = "0.12.0", features = ["verify"]}
+anyhow = "1.0.44"
+base64 = "0.13.0"
+p256 = {version = "0.9.0", features = ["ecdsa-core"]}
+ecdsa = { version = "0.12.4", features = ["verify", "pem", "der", "pkcs8"] }
