--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 chrono = { version = "0.4.11", features = ["serde"] }
 clap = "3.0.0-beta.5"
-serde_json = "1.0.68"
+serde_json = { version = "1.0.68", features = ["raw_value"] }
 serde = {version = "1.0.130", features = ["derive"]}
 serde_plain = "1.0.0"
 serde_with = { version = "1.8.0", features = ["json"]}
